took away padding on mobile destination to fix the steps going off screen

--- a/Frontend/src/scss/style.scss
+++ b/Frontend/src/scss/style.scss
@@ -171,6 +171,9 @@ $font-default: Rubik, helvetica, sans-serif;
 
 .destination {
   padding: 22px;
+  @media #{$mobile} {
+    padding: 0;
+  }
   .input {
     width: 100% !important;
     max-width: 600px;
